# hindsight-benchmarks

./: .gitignore  README.md  start-visualizer.sh
visualizer/: .sesskey  package-lock.json  package.json  pyproject.toml  tailwind.config.ts
visualizer-web/: README.md
visualizer-web/app/: layout.tsx  page.tsx
visualizer-web/app/locomo/: page.tsx
visualizer-web/app/locomo/[itemIdx]/: page.tsx
visualizer-web/app/longmemeval/[itemIdx]/: page.tsx
visualizer-web/lib/: data.ts
visualizer/app/: globals.css  layout.tsx  not-found.tsx  page.tsx
visualizer/app/longmemeval/: page.tsx
visualizer/app/longmemeval/[itemIdx]/: page.tsx
visualizer/components/: item-list.tsx  question-list.tsx
visualizer/lib/: types.ts  utils.ts
visualizer/visualizer/: main.py
