[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "visualizer"
version = "0.0.7"
description = "Benchmarks visualizer for Hindsight memory system"
requires-python = ">=3.11"
dependencies = [
    "python-fasthtml>=0.12.33",
    "uvicorn>=0.30.0",
]

[project.scripts]
visualizer = "visualizer.main:main"

[tool.hatch.build.targets.wheel]
packages = ["visualizer"]
